--- a/MixViT/experiments/mixformer_deit_hockey/baseline.yaml
+++ b/MixViT/experiments/mixformer_deit_hockey/baseline.yaml
@@ -28,13 +28,14 @@ DATA:
     SAMPLE_PER_EPOCH: 60000
   VAL:
     DATASETS_NAME:
-    - SportsMOT_val
+    - hockeyTrackingDataset
     DATASETS_RATIO:
     - 1
     SAMPLE_PER_EPOCH: 10000
 MODEL:
   BACKBONE:
     PRETRAINED: True
+    #PRETRAINED_PATH: 'pretrained/MixFormer_sports_train.pth.tar'
     PRETRAINED_PATH: 'pretrained/MixFormerOnlineScore.pth.tar'
     INIT: 'trunc_norm'
     NUM_STAGES: 3
