--- a/MixViT/experiments/mixformer_deit_hockey/track.yaml
+++ b/MixViT/experiments/mixformer_deit_hockey/track.yaml
@@ -35,9 +35,11 @@ DATA:
 MODEL:
   BACKBONE:
     PRETRAINED: True
-    PRETRAINED_PATH: 'pretrained/MixFormer_sports_train.pth.tar'
+    #PRETRAINED_PATH: 'pretrained/MixFormer_sports_train.pth.tar'
     #PRETRAINED_PATH: 'pretrained/MixFormerOnlineScore.pth.tar'
     #PRETRAINED_PATH: 'pretrained/MixFormer_soccernet_train.pth.tar'
+    #PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0005.pth.tar'
+    PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0010.pth.tar'
     INIT: 'trunc_norm'
     NUM_STAGES: 3
     PATCH_SIZE: [ 7, 3, 3 ]
