--- a/MixViT/experiments/mixformer_deit_hockey/track.yaml
+++ b/MixViT/experiments/mixformer_deit_hockey/track.yaml
@@ -39,7 +39,8 @@ MODEL:
     #PRETRAINED_PATH: 'pretrained/MixFormerOnlineScore.pth.tar'
     #PRETRAINED_PATH: 'pretrained/MixFormer_soccernet_train.pth.tar'
     #PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0005.pth.tar'
-    PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0010.pth.tar'
+    #PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0010.pth.tar'
+    PRETRAINED_PATH: 'pretrained/mixsort/MixFormer_my_ch_to_hockey_tracking_dataset_ep0035.pth.tar'
     INIT: 'trunc_norm'
     NUM_STAGES: 3
     PATCH_SIZE: [ 7, 3, 3 ]
